# Dei

./: RELEASE.md
backend/: .gitignore  GOD_METHOD_DETECTION.md  QUICK_START.md  README.md
backend/examples/: GodClassExample.cs  GodFileExample.cs  GodMethodExample.cs
backend/src/GodClassDetector.Analysis/: GodClassDetector.Analysis.csproj
backend/src/GodClassDetector.Analysis/Metrics/: ComplexityCalculator.cs
backend/src/GodClassDetector.Analysis/Parsers/: RoslynClassParser.cs
backend/src/GodClassDetector.Analysis/Reporting/: ASTReportGenerator.cs
backend/src/GodClassDetector.Analysis/Services/: FileSystemASTBuilder.cs  GodClassDetectorService.cs  ParallelASTTraverser.cs
backend/src/GodClassDetector.Clustering/: GodClassDetector.Clustering.csproj
backend/src/GodClassDetector.Console/: GodClassDetector.Console.csproj  Program.cs  appsettings.json
backend/src/GodClassDetector.Console/Configuration/: DetectionOptions.cs
backend/src/GodClassDetector.Console/Services/: DetectorApplication.cs
backend/src/GodClassDetector.Core/: GodClassDetector.Core.csproj
backend/src/GodClassDetector.Core/Interfaces/: IClassParser.cs  IGodClassDetector.cs  IReportGenerator.cs
backend/src/GodClassDetector.Core/Models/: AnalysisResult.cs  DetectionThresholds.cs  GodMethodResult.cs  MethodMetrics.cs  Result.cs
backend/tests/GodClassDetector.Tests/: GodClassDetector.Tests.csproj
backend/tests/GodClassDetector.Tests/Metrics/: ComplexityCalculatorTests.cs
backend/tests/GodClassDetector.Tests/Models/: ClassMetricsTests.cs
dei-algolang/: README.md  dei.alg
dei-algolang/analysis/: complexity.alg
dei-algolang/clustering/: kmeans.alg  semantic.alg
dei-algolang/core/: arena.alg  builder.alg  traverser.alg  visitor.alg
dei-algolang/report/: formatter.alg
dei-algolang/types/: metrics.alg  models.alg  node.alg
dei-cs/: ARCHITECTURE.md  GodClassDetector.sln  README.md
dei-cs/src/GodClassDetector.Analysis/Reporting/: ReportGenerator.cs
dei-cs/src/GodClassDetector.Analysis/Services/: GodClassDetectorService.cs
dei-cs/src/GodClassDetector.Clustering/: GodClassDetector.Clustering.csproj
dei-cs/src/GodClassDetector.Clustering/Analyzers/: SemanticClusteringAnalyzer.cs
dei-cs/src/GodClassDetector.Console/: GodClassDetector.Console.csproj  Program.cs  appsettings.json
dei-cs/src/GodClassDetector.Core/Interfaces/: IFileSystemASTBuilder.cs  IMetricsCalculator.cs  IParallelASTTraverser.cs  ISemanticAnalyzer.cs
dei-cs/src/GodClassDetector.Core/Models/: ClassMetrics.cs  DetectionThresholds.cs  FileSystemNode.cs  GodFileResult.cs  ResponsibilityCluster.cs
dei-cs/tests/GodClassDetector.Tests/Metrics/: ComplexityCalculatorTests.cs
dei-rs/: .gitignore  Cargo.toml  E2E_TEST_SUMMARY.md  LICENSE  Makefile  README.md  publish.sh
dei-rs/crates/dei-ast/: Cargo.toml
dei-rs/crates/dei-ast/src/: arena.rs  builder.rs  lib.rs  node.rs  tests.rs  traverser.rs  visitor.rs
dei-rs/crates/dei-ast/tests/: integration_test.rs
dei-rs/crates/dei-cli/: Cargo.toml
dei-rs/crates/dei-cli/src/: main.rs
dei-rs/crates/dei-cli/src/commands/: arch.rs  check.rs  mod.rs
dei-rs/crates/dei-cli/src/report/: mod.rs
dei-rs/crates/dei-clustering/: Cargo.toml
dei-rs/crates/dei-clustering/src/: analyzer.rs  hdbscan.rs  lib.rs
dei-rs/crates/dei-clustering/tests/: integration_test.rs
dei-rs/crates/dei-core/: Cargo.toml
dei-rs/crates/dei-core/src/: error.rs  lib.rs  metrics.rs  models.rs  tests.rs  thresholds.rs  traits.rs
dei-rs/crates/dei-core/tests/: integration_test.rs
dei-rs/crates/dei-e2e/: .gitignore  Cargo.toml  FINAL_REPORT.md  README.md  SHOWCASE.md
dei-rs/crates/dei-e2e/benches/: e2e_benchmarks.rs
dei-rs/crates/dei-e2e/fixtures/csharp/: GodClass.cs  Healthy.cs
dei-rs/crates/dei-e2e/fixtures/java/: GodClass.java
dei-rs/crates/dei-e2e/fixtures/javascript/: god_class.js
dei-rs/crates/dei-e2e/fixtures/perl/: god_class.pl
dei-rs/crates/dei-e2e/fixtures/rust/: god_class.rs  god_method.rs  healthy.rs
dei-rs/crates/dei-e2e/fixtures/typescript/: god_class.ts
dei-rs/crates/dei-e2e/src/: fixtures.rs  harness.rs  lib.rs
dei-rs/crates/dei-e2e/tests/: cli_tests.rs  edge_cases.rs  pipeline_tests.rs
dei-rs/crates/dei-languages/: Cargo.toml
dei-rs/crates/dei-languages/src/: complexity.rs  csharp.rs  java.rs  javascript.rs  lib.rs  multi_parser.rs  perl.rs  python.rs  r.rs  rust.rs
dei-rs/crates/dei-metrics/: Cargo.toml
dei-rs/crates/dei-metrics/src/: coupling.rs  graph.rs  lib.rs
dei-rs/crates/dei-metrics/tests/: integration_test.rs
scripts/: prepare-release.sh  test-formula.sh
