[workspace]
members = [
    "crates/dei-core",
    "crates/dei-ast",
    "crates/dei-metrics",
    "crates/dei-clustering",
    "crates/dei-languages",
    "crates/dei-cli",
    "crates/dei-e2e",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Griffin Strier"]
license = "MIT"
repository = "https://github.com/GriffinCanCode/Dei"
homepage = "https://github.com/GriffinCanCode/Dei"
documentation = "https://docs.rs/dei"
description = "Static analysis tool for detecting god classes and god methods"
keywords = ["static-analysis", "code-quality", "linter", "refactoring"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
# Core
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

# Async & Parallel
tokio = { version = "1.40", features = ["full"] }
rayon = "1.10"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"
indicatif = "0.17"

# Parsing
tree-sitter = "0.26"
tree-sitter-language = "0.1"
tree-sitter-rust = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-perl = "1.1"
tree-sitter-r = "1.2"
syn = { version = "2.0", features = ["full", "visit"] }

# Analysis
petgraph = "0.6"
ndarray = "0.15"
linfa = "0.7"
linfa-clustering = "0.7"

# Utilities
dashmap = "5.5"
once_cell = "1.19"
regex = "1.10"
walkdir = "2.5"
ignore = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"

[profile.dev]
opt-level = 0

