[package]
name = "dei-ast"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AST traversal and analysis for DEI"

[dependencies]
dei-core = { version = "0.1.0", path = "../dei-core" }

thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rayon.workspace = true
dashmap.workspace = true
walkdir.workspace = true
ignore.workspace = true

