[package]
name = "dei"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "dei"
path = "src/main.rs"

[dependencies]
dei-core = { version = "0.1.1", path = "../dei-core" }
dei-ast = { version = "0.1.1", path = "../dei-ast" }
dei-languages = { version = "0.1.1", path = "../dei-languages" }
dei-clustering = { version = "0.1.1", path = "../dei-clustering" }
dei-metrics = { version = "0.1.1", path = "../dei-metrics" }

clap.workspace = true
colored.workspace = true
indicatif.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

