[package]
name = "dei-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and traits for DEI static analysis tool"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

