[package]
name = "dei-metrics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Metrics and coupling analysis for DEI"

[dependencies]
dei-core = { version = "0.1.1", path = "../dei-core" }

thiserror.workspace = true
petgraph.workspace = true
serde.workspace = true
serde_json.workspace = true

